--- a/ZSG/Packages/manifest.json
+++ b/ZSG/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.h8man.2d.navmeshplus": "file:E:/Bibliotecas/Unity/Packages/NavMeshPlus-master",
     "com.unity.2d.animation": "5.0.7",
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.psdimporter": "4.1.0",
